Wire Hytale plugin to control ingress